# implicit-minimal-surfaces

./: CMakeLists.txt  README.md
examples/hands_easy/: A.pinned  B.pinned
examples/teddy/: A.pinned  B.pinned
src/: CMakeLists.txt  implicit-minimal-matcher.cpp
src/linebundle/: connection_laplacian.cpp  connection_laplacian.h  singularity_locator.cpp  singularity_locator.h
src/matching/: lbfgs.h  minimal_matching.cpp  minimal_matching.h
src/topology/: product_mesh.cpp  product_mesh.h
src/utilities/: IO.h  blopex.h  hsl2rgb.h
